--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "file-saver": "^2.0.5",
+    "node-fetch": "^3.3.2",
     "openai": "^4.55.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
