--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@bufferhead/nightowl": "^0.0.14",
     "cors": "^2.8.5",
     "file-saver": "^2.0.5",
     "node-fetch": "^3.3.2",
     "openai": "^4.55.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
